# klangstrom-emulator-standalone

./: .gitmodules  CMakeCompilerFlags.cmake  CMakeLibrariesConfig.cmake  CMakeLists.txt  README.md
libraries/: CMakeLibrariesConfig.cmake
src/: klangstrom-emulator-standalone.cpp  klangstrom-emulator-standalone.ino
